Fix some layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1376,7 +1376,7 @@ summary.highlight {
     margin: 10px 0;
 }
 
-.company-logo {
+.company-icon {
     font-size: 3rem;
     color: #6c757d;
 }
